--- a/src/scss/core/_helper.scss
+++ b/src/scss/core/_helper.scss
@@ -1,3 +1,5 @@
+@import 'core/variables';
+
 // placeholder selectors
 
 %flex-center-center {
@@ -104,11 +106,14 @@
 		width						: var(--scrollbar-width);
 		height						: var(--scrollbar-width);
 		border-radius				: var(--border-radius-sm);
+		background-color			: hsl(var(--col-bg-panel-hue) var(--col-bg-panel-sat) calc(var(--col-bg-panel-lig) + 4%) / 0.4);
+		transition					: $bg-transition;
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color			: hsl(var(--col-bg-panel-hue) var(--col-bg-panel-sat) calc(var(--col-bg-panel-lig) - 4%) / var(--col-bg-panel-alp));
 		border-radius				: var(--border-radius);
+		background-color			: hsl(var(--col-bg-panel-hue) var(--col-bg-panel-sat) calc(var(--col-bg-panel-lig) - 2%) / var(--col-bg-panel-alp));
+		transition					: $bg-transition;
 	}
 
 }
