--- a/src/scss/html/_code.scss
+++ b/src/scss/html/_code.scss
@@ -38,5 +38,6 @@ pre code {
 
 	background			: none;
 	padding				: 0;
+	white-space			: nowrap;
 
 }
